tests/ui/skip_impl_trait_arg.stderr
error[E0599]: no method named `sink` found for reference `&dyn Dyn` in the current scope
  --> tests/ui/skip_impl_trait_arg.rs:21:7
   |
21 |     d.sink(1u8);
   |       ^^^^ method not found in `&dyn Dyn`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Src` defines an item `sink`, perhaps you need to implement it
  --> tests/ui/skip_impl_trait_arg.rs:5:1
   |
 5 | trait Src {
   | ^^^^^^^^^
